libexec_SCRIPTS=check_storage_health
GL_MODULES=\
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Extraopts.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Getopt.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/CSF.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DATADOMAINMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DELLSTORAGESCMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HOSTRESOURCESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ISILONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MIB2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETAPPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPV2TCV1MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UCDSNMPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMCLUSTERINGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMDNSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMINFOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMNETWORKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMNOTIFICATIONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMNTPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMSECURITYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMSTATUSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LEFTHANDNETWORKSNSMSTORAGEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NASMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/QTSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYDISKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYGPUINFOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYRAIDMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYSMARTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYSPACEIOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYSTORAGEIOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYSERVICESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOLOGYUPSMIB.pm


EXTRA_MODULES=\
  CheckStorageHealth/HOSTRESOURCESMIB/Component/ClockSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB/Component/DeviceSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB/Component/DiskSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB/Component/CpuSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB/Component/MemSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB/Component/UptimeSubsystem.pm \
  CheckStorageHealth/HOSTRESOURCESMIB.pm \
  CheckStorageHealth/NetApp/Filer/Component/AggregateSubsystem.pm \
  CheckStorageHealth/NetApp/Filer/Component/VolumeSubsystem.pm \
  CheckStorageHealth/NetApp/Filer/Component/PlexSubsystem.pm \
  CheckStorageHealth/NetApp/Filer/Component/DiskSubsystem.pm \
  CheckStorageHealth/NetApp/Filer/Component/CpuSubsystem.pm \
  CheckStorageHealth/NetApp/Filer.pm \
  CheckStorageHealth/NetApp.pm \
  CheckStorageHealth/Dell/Isilon/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/PowersensorSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/TemperatureSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/FanSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/DiskSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/NodeSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/ClusterSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/CpuSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/StorageSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/SnapshotSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/QuotaSubsystem.pm \
  CheckStorageHealth/Dell/Isilon/Component/NetworkSubsystem.pm \
  CheckStorageHealth/Dell/Isilon.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/AlertSubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/NodeSubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/FanSubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/DiskSubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/PowersupplySubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/TemperatureSubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/Dell/Storagecenter.pm \
  CheckStorageHealth/Dell/Datadomain/Components/CpuSubsystem.pm \
  CheckStorageHealth/Dell/Datadomain/Components/EnvironmentalSubsystem.pm \
  CheckStorageHealth/Dell/Datadomain/Components/AlertSubsystem.pm \
  CheckStorageHealth/Dell/Datadomain/Components/DiskSubsystem.pm \
  CheckStorageHealth/Dell/Datadomain/Components/FanSubsystem.pm \
  CheckStorageHealth/Dell/Datadomain/Components/PowersupplySubsystem.pm \
  CheckStorageHealth/Dell/Datadomain/Components/TemperatureSubsystem.pm \
  CheckStorageHealth/Dell/Datadomain.pm \
  CheckStorageHealth/Dell.pm \
  CheckStorageHealth/HP/Lefthand/Component/StorageSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/ClusterSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/RaidSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/DiskSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/CacheSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/FanSubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/PowersupplySubsystem.pm \
  CheckStorageHealth/HP/Lefthand/Component/TemperatureSubsystem.pm \
  CheckStorageHealth/HP/Lefthand.pm \
  CheckStorageHealth/HP.pm \
  CheckStorageHealth/UCDMIB/Components/CpuSubsystem.pm \
  CheckStorageHealth/UCDMIB/Components/LoadSubsystem.pm \
  CheckStorageHealth/UCDMIB/Components/MemSubsystem.pm \
  CheckStorageHealth/UCDMIB/Components/SwapSubsystem.pm \
  CheckStorageHealth/Synology/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/Synology/Component/DiskSubsystem.pm \
  CheckStorageHealth/Synology/Component/RaidSubsystem.pm \
  CheckStorageHealth/Synology.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/CpuSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/MemSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/StorageSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/RaidSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/DiskSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/TemperatureSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/FanSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/PowersupplySubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/QNAP/QuTShero.pm \
  CheckStorageHealth/QNAP/NAS/Component/CpuSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/DiskSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/EnvironmentalSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/FanSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/MemSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/RaidSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/StorageSubsystem.pm \
  CheckStorageHealth/QNAP/NAS/Component/TemperatureSubsystem.pm \
  CheckStorageHealth/QNAP/NAS.pm \
  CheckStorageHealth/QNAP.pm \
  CheckStorageHealth/Device.pm

SED=/bin/sed
GREP=/bin/grep
CAT=/bin/cat
ECHO=/bin/echo
if DISABLE_STANDALONE
STANDALONE = no
else
STANDALONE = yes
endif

SUFFIXES = .pl .pm .sh

VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t

EXTRA_DIST=$(libexec_SCRIPTS).pl $(EXTRA_MODULES) $(GL_MODULES)

CLEANFILES=$(libexec_SCRIPTS)

AM_INSTALL_PROGRAM_FLAGS=@INSTALL_OPTS@

.pm :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.pl :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.sh :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

$(libexec_SCRIPTS) : $(EXTRA_DIST)
	$(ECHO) "#! #PERL# -w" | $(AWK) -f ./subst > $@
	$(ECHO) "# nagios: +epn" >> $@
	$(ECHO) >> $@
	if [ "${STANDALONE}" == "yes" ]; then \
		$(ECHO) i am standalone; \
		for m in ${GL_MODULES}; do \
			$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(SED) -e '/^__PACKAGE__/,$$d' | $(AWK) -f ./subst >> $@; \
		done \
	fi
	for m in ${EXTRA_MODULES}; do \
		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
	done
	$(ECHO) >> $@
	$(CAT) $(libexec_SCRIPTS).pl | $(AWK) -f ./subst >> $@
	chmod +x $@

